# OpenBand

./: .gitignore  README.md
backend/: README.md  prompt_cli.py  pyproject.toml
backend/models/: style_model.joblib
backend/src/music_taste_rec/: __init__.py  api.py  cli.py  data.py  download.py  offline_eval.py  style_model.py  tag_fusion.py
backend/src/openband/: __init__.py  auth.py  daily.py  songs.py
backend/src/openband/prompt_generation/: cli.py  profile_service.py
backend/src/openband/prompt_generation/prompts/: brief_candidates.prompt.md  lyrics.prompt.md  playlist.prompt.md  profile.prompt.md  style.prompt.md
backend/src/openband/suno_browser/: __init__.py  cli.py  client.py
backend/src/openband/suno_browser/playwright/: .gitignore  package-lock.json  package.json
backend/src/openband/suno_browser/playwright/examples/: 01-static-fever.md  08-black-circuit-choir.md
backend/src/openband/suno_browser/playwright/scripts/: batch-suno.mjs  generate-download-suno.mjs  open-suno-chrome.mjs
backend/tests/: test_api.py  test_auth.py  test_offline_eval.py  test_openband_modules.py  test_songs.py  test_style_model.py  test_tag_fusion.py
backend/tests/fixtures/: new_tracks.csv
backend/tests/fixtures/raw/: Music Info.csv  User Listening History.csv
daily-playlist-explainer/: README.md
mobile/: app.json  package-lock.json  package.json
suno/: .gitignore  call_prompt.py  original prompt  pyproject.toml
suno/src/suno_prompt_tools/: __init__.py  cli.py
反代/: 02-ghosts-on-the-boulevard.md  06-afterburner-saints.md  07-blackout-parade.md  package.json  (+1 more)
(+32 files in other folders)
