[project]
name = "music-taste-rec"
version = "0.1.0"
description = "Music style/tag association model for AI music recommendation cold-start."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.0",
    "joblib>=1.4.2",
    "kaggle>=1.6.17",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "python-multipart>=0.0.20",
    "qrcode>=8.0",
    "rich>=13.7.1",
    "scikit-learn>=1.5.1",
    "scipy>=1.13.1",
    "typer>=0.12.3",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.2.2",
]

[project.scripts]
music-rec = "music_taste_rec.cli:app"
openband-prompt = "openband.prompt_generation.cli:main"
openband-suno-browser = "openband.suno_browser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/music_taste_rec", "src/openband"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
