[project]
name = "suno-prompt-tools"
version = "0.1.0"
description = "Small CLI for generating Suno style prompts and lyrics through a local Responses API."
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.1",
    "scipy>=1.13.1",
]

[project.scripts]
suno-prompt = "suno_prompt_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
